- show the title of the index page instead of the dir name - Align expand icons - fix wrapping - highlight current menu item - show only the pages only from the guide dir

--- a/docs/style/css/_nav_menu.scss
+++ b/docs/style/css/_nav_menu.scss
@@ -1,15 +1,44 @@
 #nav-menu {
+  > li:first-child {
+    padding-left: 0;
+  }
+
   li {
-    padding-left: 1em;
+    padding-left: 1.2em;
 
     > ul {
       display: none;
     }
 
+    $item-padding-top: 8px;
+
+    &.parent {
+      .menu-item {
+        align-items: center;
+        display: table;
+        width: 100%;
+
+        > span {
+          display: table-cell;
+          vertical-align: middle;
+          cursor: pointer;
+          padding: 6px 13px;
+          width: 1%;
+        }
+
+        > a {
+          display: inline-block;
+          padding: $item-padding-top 0 $item-padding-top 4px;
+          width: 90%;
+          width: calc(100% - 40px);
+        }
+      }
+    }
+
     &.collapsibleListOpen {
-      > div {
-        padding-left: 13px;
-        background: no-repeat url('../img/nav_menu/minus-green.png');
+      > .menu-item > span {
+        background: no-repeat url("../img/nav_menu/minus-green.png");
+        background-position: 50% 50%;
       }
       > ul {
         display: block;
@@ -17,9 +46,9 @@
     }
 
     &.collapsibleListClosed {
-      > div {
-        padding-left: 13px;
+      > .menu-item > span {
         background: no-repeat url('../img/nav_menu/plus-green.png');
+        background-position: 50% 50%;
       }
     }
   }
